fix: UserPrincipal에 role 추가 / HttpUtil을 ResponseUtil로 수정